--- a/index.html
+++ b/index.html
@@ -19,7 +19,16 @@
     <!-- end nav -->
     <!-- start welcome section -->
     <section id="welcome-section" class="welcome-section">
-        <h1>Hello, I am Stefan</h1>
+        <h1>Hello, I am 
+            <div class="waviy">
+                <span style="--i:1">S</span>
+                <span style="--i:2">t</span>
+                <span style="--i:3">e</span>
+                <span style="--i:4">f</span>
+                <span style="--i:5">a</span>
+                <span style="--i:6">n</span>
+            </div>
+        </h1>
         <p>a front end web developer</p>
     </section>
     <!-- end welcome section -->
