--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <h2 class="projects-section-header">These are some of my projects, <span>with more to come &#128516;</span></h2>
 
         <div class="projects-grid">
-            <a href="https://vrza93.github.io/dice-game/" target="_blank" class="project">
-                <img src="./images/dice-game.jpg" alt="picture-of-my-dice-game-project" class="project-image">
+            <a href="https://vrza93.github.io/weather/" target="_blank" class="project">
+                <img src="./images/weather-app.jpg" alt="picture-of-my-weather-app-project" class="project-image">
                 <p class="project-tile">Dice game</p>
             </a>
             <a href="" class="project">
