--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
         <div class="projects-grid">
             <a href="https://vrza93.github.io/weather/" target="_blank" class="project">
                 <img src="./images/weather-app.jpg" alt="picture-of-my-weather-app-project" class="project-image">
-                <p class="project-tile">Dice game</p>
+                <p class="project-tile">Weather App</p>
             </a>
             <a href="https://vrza93.github.io/password-generator/" class="project">
                 <img src="./images/password-generator.jpg" alt="picture-of-my-password=generator-app" class="project-image">
-                <p class="project-tile">Coming soon</p>
+                <p class="project-tile">Password Generator</p>
             </a>
             <a href="" class="project">
                 <img src="./images/coming-soon.jpg" alt="coming-soon-image" class="project-image">
