--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <span style="--i:6">n</span>
             </div>
         </h1>
-        <p>a front end web developer</p>
+        <p>a web developer / designer</p>
     </section>
     <!-- end welcome section -->
     <!--start projects section-->
@@ -41,7 +41,7 @@
                 <img src="./images/weather-app.jpg" alt="picture-of-my-weather-app-project" class="project-image">
                 <p class="project-tile">Weather App</p>
             </a>
-            <a href="https://vrza93.github.io/password-generator/" class="project">
+            <a href="https://vrza93.github.io/password-generator/" target="_blank" class="project">
                 <img src="./images/password-generator.jpg" alt="picture-of-my-password=generator-app" class="project-image">
                 <p class="project-tile">Password Generator</p>
             </a>
