--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <span style="--i:6">n</span>
             </div>
         </h1>
-        <p>a web developer / designer</p>
+        <p>a web developer 	&#47; designer</p>
     </section>
     <!-- end welcome section -->
     <!--start projects section-->
