--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         <div class="projects-grid">
             <a href="https://vrza93.github.io/weather/" target="_blank" class="project">
-                <img src="./images/weather-app.jpg" alt="picture-of-my-weather-app-project" class="project-image">
+                <img src="images/weather-app.jpg" alt="picture-of-my-weather-app-project" class="project-image">
                 <p class="project-tile">Weather App</p>
             </a>
             <a href="https://vrza93.github.io/password-generator/" target="_blank" class="project">
