--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <span style="--i:6">n</span>
             </div>
         </h1>
-        <p>a front end developer &#47; IT Sys Eng</p>
+        <p>a front end developer and IT Sys Eng</p>
     </section>
     <!-- end welcome section -->
     <!--start projects section-->
