--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Stefan Vrzic</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -35,13 +41,23 @@
           <span style="--i: 6">n</span>
         </div>
       </h1>
-      <p>a front end developer and IT Sys Eng</p>
+      <p>
+        a front end developer
+        <span style="font-size: 2.4rem; font-style: normal">&#128187;</span>, IT
+        System Engineer
+        <span style="font-size: 2.4rem; font-style: normal">&#9881;</span> and
+        photographer
+        <span style="font-size: 2.4rem; font-style: normal">&#128248;</span>
+      </p>
     </section>
     <!-- end welcome section -->
     <!--start projects section-->
     <section id="projects" class="projects-section">
       <h2 class="projects-section-header">
-        These are some of my projects, <span>with more to come &#128516;</span>
+        These are some of my projects,
+        <span style="color: rgb(50, 248, 255); text-decoration: underline"
+          >with more to come &#128516;</span
+        >
       </h2>
 
       <div class="projects-grid">
@@ -97,12 +113,41 @@
           />
           <p class="project-tile">Vrza Tech</p>
         </a>
+        <a
+          href="https://vrza93.github.io/to-do-app/"
+          target="_blank"
+          class="project"
+        >
+          <img
+            src="./images/to-do.png"
+            alt="snasphot of Vrza Tech website"
+            class="project-image"
+          />
+          <p class="project-tile">To-Do App</p>
+        </a>
+        <a href="" target="_blank" class="project">
+          <img
+            src="./images/coming-soon.jpg"
+            alt="coming-soon-image"
+            class="project-image"
+          />
+          <p class="project-tile">Coming Soon</p>
+        </a>
+        <a href="https://vrzatech.me/" target="_blank" class="project">
+          <img
+            src="./images/coming-soon.jpg"
+            alt="coming-soon-image"
+            class="project-image"
+          />
+          <p class="project-tile">Coming Soon</p>
+        </a>
         <a href="#projects" class="project">
           <img
             src="./images/coming-soon.jpg"
             alt="coming-soon-image"
             class="project-image"
           />
+
           <p class="project-tile">Coming soon</p>
         </a>
       </div>
