--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,59 +9,90 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap"
       rel="stylesheet"
     />
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
       crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
   </head>
   <body>
-    <!-- start nav-->
     <nav id="navbar" class="nav">
-      <ul class="nav-list">
+      <button id="menu-toggle" aria-label="Open Navigation Menu">
+        <i class="fas fa-bars"></i>
+      </button>
+
+      <ul class="nav-list" id="nav-list">
         <li><a href="#welcome-section">About</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
+      <button id="theme-toggle" aria-label="Toggle Light/Dark Theme">
+        <i class="fas fa-sun"></i>
+      </button>
     </nav>
-    <!-- end nav -->
-    <!-- start welcome section -->
     <section id="welcome-section" class="welcome-section">
       <h1>
-        Hello, I am
-        <div class="waviy">
-          <span style="--i: 1">S</span>
-          <span style="--i: 2">t</span>
-          <span style="--i: 3">e</span>
-          <span style="--i: 4">f</span>
-          <span style="--i: 5">a</span>
-          <span style="--i: 6">n</span>
-        </div>
+        Hello, I am Stefan
       </h1>
       <p>
-        a front end developer
-        <span style="font-size: 2.4rem; font-style: normal">&#128187;</span>, IT
-        System Engineer
-        <span style="font-size: 2.4rem; font-style: normal">&#9881;</span> and
-        photographer
-        <span style="font-size: 2.4rem; font-style: normal">&#128248;</span>
+        I'm a <span class="dynamic-text"></span>
       </p>
     </section>
-    <!-- end welcome section -->
-    <!--start projects section-->
     <section id="projects" class="projects-section">
       <h2 class="projects-section-header">
-        These are some of my projects,
-        <span style="color: rgb(50, 248, 255); text-decoration: underline"
-          >with more to come &#128516;</span
-        >
+        Explore my work ✨
       </h2>
 
       <div class="projects-grid">
+        <a href="https://www.danicadesign.me/" target="_blank" class="project">
+          <img
+            src="./images/danica-design-studio.jpg"
+            alt="snapshot of Danica Design Studio website"
+            class="project-image"
+          />
+          <p class="project-tile">Danica Design Studio</p>
+        </a>
+        <a
+          href="https://danicadesign.github.io/danica_design_/"
+          target="_blank"
+          class="project"
+        >
+          <img
+            src="./images/danica-design-social.jpg"
+            alt="snapshot of danica design social website which was built for instagram"
+            class="project-image"
+          />
+          <p class="project-tile">Danica Design IG Social</p>
+        </a>
+        <a href="https://mediumspringgreen-kangaroo-534355.hostingersite.com/" target="_blank" class="project">
+          <img
+            src="./images/coastal-cusisine.png"
+            alt="snapshot of Coastal Cuisine digital menu website"
+            class="project-image"
+          />
+          <p class="project-tile">Digital Menu</p>
+        </a>
+        <a href="https://vrzatech.me/" target="_blank" class="project">
+          <img
+            src="./images/vrzatech.png"
+            alt="snasphot of Vrza Tech website"
+            class="project-image"
+          />
+          <p class="project-tile">Vrza Tech</p>
+        </a>
+        <a href="https://lavenderblush-peafowl-594499.hostingersite.com/" target="_blank" class="project">
+          <img
+            src="./images/vrzatech-socials.png"
+            alt="csnapshot of Vrza Tech social links website"
+            class="project-image"
+          />
+          <p class="project-tile">Vrza Tech Social links</p>
+        </a>
         <a
           href="https://vrza93.github.io/weather/"
           target="_blank"
@@ -86,34 +117,6 @@
           />
           <p class="project-tile">Password Generator</p>
         </a>
-        <a href="https://www.danicadesign.me/" target="_blank" class="project">
-          <img
-            src="./images/danica-design-studio.jpg"
-            alt="snapshot of Danica Design Studio website"
-            class="project-image"
-          />
-          <p class="project-tile">Danica Design Studio</p>
-        </a>
-        <a
-          href="https://danicadesign.github.io/danica_design_/"
-          target="_blank"
-          class="project"
-        >
-          <img
-            src="./images/danica-design-social.jpg"
-            alt="snapshot of danica design social website which was built for instagram"
-            class="project-image"
-          />
-          <p class="project-tile">Danica Design IG Social</p>
-        </a>
-        <a href="https://vrzatech.me/" target="_blank" class="project">
-          <img
-            src="./images/vrzatech.png"
-            alt="snasphot of Vrza Tech website"
-            class="project-image"
-          />
-          <p class="project-tile">Vrza Tech</p>
-        </a>
         <a
           href="https://vrza93.github.io/to-do-app/"
           target="_blank"
@@ -125,23 +128,7 @@
             class="project-image"
           />
           <p class="project-tile">To-Do App</p>
-        </a>
-        <a href="" target="_blank" class="project">
-          <img
-            src="./images/coming-soon.jpg"
-            alt="coming-soon-image"
-            class="project-image"
-          />
-          <p class="project-tile">Coming Soon</p>
-        </a>
-        <a href="https://vrzatech.me/" target="_blank" class="project">
-          <img
-            src="./images/coming-soon.jpg"
-            alt="coming-soon-image"
-            class="project-image"
-          />
-          <p class="project-tile">Coming Soon</p>
-        </a>
+      </a>
         <a href="#projects" class="project">
           <img
             src="./images/coming-soon.jpg"
@@ -153,14 +140,12 @@
         </a>
       </div>
       <a href="https://github.com/vrza93" class="btn-show-all" target="_blank">
-        &#60; My GitHub &#62;
+        <i class="fab fa-github"></i> View All Projects
       </a>
     </section>
-    <!-- end projects section -->
-    <!-- start contact section -->
     <section id="contact" class="contact-section">
       <div class="contact-section-header">
-        <h2>Let's work together...</h2>
+        <h2>Let's build something together 🤝</h2>
         <p>
           I am always trying to learn something new and write better, cleaner
           code.
@@ -169,122 +154,52 @@
       <div class="contact-links">
         <a
           id="profile-link"
-          href="https://github.com/freecodecamp"
+          href="https://github.com/vrza93"
           target="_blank"
-          class="btn contact-details"
-          ><i class="bi bi-github"></i
-          ><button type="button" class="btn btn-outline-danger">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="16"
-              height="16"
-              fill="currentColor"
-              class="bi bi-github"
-              viewBox="0 0 16 16"
-            >
-              <path
-                d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"
-              ></path>
-            </svg>
-            GitHub
-          </button></a
+          class="contact-detail-btn"
+          aria-label="GitHub Profile"
         >
+          <i class="fab fa-github"></i>
+        </a>
 
         <a
           href="https://www.instagram.com/stefan_vrzic/"
           target="_blank"
-          class="btn contact-details"
-          ><button type="button" class="btn btn-outline-danger">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="16"
-              height="16"
-              fill="currentColor"
-              class="bi bi-instagram"
-              viewBox="0 0 16 16"
-            >
-              <path
-                d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z"
-              ></path>
-            </svg>
-            Instagram
-          </button></a
+          class="contact-detail-btn"
+          aria-label="Instagram Profile"
         >
+          <i class="fab fa-instagram"></i>
+        </a>
 
         <a
           href="https://www.linkedin.com/in/stefan-vrzic-372ba1225/"
           target="_blank"
-          class="btn contact-details"
-          ><button type="button" class="btn btn-outline-danger">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="16"
-              height="16"
-              fill="currentColor"
-              class="bi bi-linkedin"
-              viewBox="0 0 16 16"
-            >
-              <path
-                d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"
-              ></path>
-            </svg>
-            LinkedIn
-          </button></a
+          class="contact-detail-btn"
+          aria-label="LinkedIn Profile"
         >
+          <i class="fab fa-linkedin"></i>
+        </a>
 
-        <a href="mailto:stefanvrzic@gmail.com" class="btn contact-details"
-          ><button type="button" class="btn btn-outline-danger">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="16"
-              height="16"
-              fill="currentColor"
-              class="bi bi-envelope-at"
-              viewBox="0 0 16 16"
-            >
-              <path
-                d="M2 2a2 2 0 0 0-2 2v8.01A2 2 0 0 0 2 14h5.5a.5.5 0 0 0 0-1H2a1 1 0 0 1-.966-.741l5.64-3.471L8 9.583l7-4.2V8.5a.5.5 0 0 0 1 0V4a2 2 0 0 0-2-2H2Zm3.708 6.208L1 11.105V5.383l4.708 2.825ZM1 4.217V4a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v.217l-7 4.2-7-4.2Z"
-              ></path>
-              <path
-                d="M14.247 14.269c1.01 0 1.587-.857 1.587-2.025v-.21C15.834 10.43 14.64 9 12.52 9h-.035C10.42 9 9 10.36 9 12.432v.214C9 14.82 10.438 16 12.358 16h.044c.594 0 1.018-.074 1.237-.175v-.73c-.245.11-.673.18-1.18.18h-.044c-1.334 0-2.571-.788-2.571-2.655v-.157c0-1.657 1.058-2.724 2.64-2.724h.04c1.535 0 2.484 1.05 2.484 2.326v.118c0 .975-.324 1.39-.639 1.39-.232 0-.41-.148-.41-.42v-2.19h-.906v.569h-.03c-.084-.298-.368-.63-.954-.63-.778 0-1.259.555-1.259 1.4v.528c0 .892.49 1.434 1.26 1.434.471 0 .896-.227 1.014-.643h.043c.118.42.617.648 1.12.648Zm-2.453-1.588v-.227c0-.546.227-.791.573-.791.297 0 .572.192.572.708v.367c0 .573-.253.744-.564.744-.354 0-.581-.215-.581-.8Z"
-              ></path>
-            </svg>
-            Email me
-          </button></a
+        <a
+          href="mailto:stefanvrzic@gmail.com"
+          class="contact-detail-btn"
+          aria-label="Email Me"
         >
+          <i class="fas fa-envelope-open-text"></i>
+        </a>
 
-        <a href="tel:+38268414693" class="btn contact-details"
-          ><button type="button" class="btn btn-outline-danger">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="16"
-              height="16"
-              fill="currentColor"
-              class="bi bi-phone-vibrate"
-              viewBox="0 0 16 16"
-            >
-              <path
-                d="M10 3a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H6a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h4zM6 2a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h4a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H6z"
-              ></path>
-              <path
-                d="M8 12a1 1 0 1 0 0-2 1 1 0 0 0 0 2zM1.599 4.058a.5.5 0 0 1 .208.676A6.967 6.967 0 0 0 1 8c0 1.18.292 2.292.807 3.266a.5.5 0 0 1-.884.468A7.968 7.968 0 0 1 0 8c0-1.347.334-2.619.923-3.734a.5.5 0 0 1 .676-.208zm12.802 0a.5.5 0 0 1 .676.208A7.967 7.967 0 0 1 16 8a7.967 7.967 0 0 1-.923 3.734.5.5 0 0 1-.884-.468A6.967 6.967 0 0 0 15 8c0-1.18-.292-2.292-.807-3.266a.5.5 0 0 1 .208-.676zM3.057 5.534a.5.5 0 0 1 .284.648A4.986 4.986 0 0 0 3 8c0 .642.12 1.255.34 1.818a.5.5 0 1 1-.93.364A5.986 5.986 0 0 1 2 8c0-.769.145-1.505.41-2.182a.5.5 0 0 1 .647-.284zm9.886 0a.5.5 0 0 1 .648.284C13.855 6.495 14 7.231 14 8c0 .769-.145 1.505-.41 2.182a.5.5 0 0 1-.93-.364C12.88 9.255 13 8.642 13 8c0-.642-.12-1.255-.34-1.818a.5.5 0 0 1 .283-.648z"
-              ></path>
-            </svg>
-            Call me
-          </button></a
+        <a
+          href="tel:+38268414693"
+          class="contact-detail-btn"
+          aria-label="Call Me"
         >
+          <i class="fas fa-phone-alt"></i>
+        </a>
       </div>
     </section>
-    <!-- end contact section -->
-    <!-- start footer section -->
     <footer>
-      <p>&#169; Created with love by me &#128522;</p>
+      <p>&#169; Created with love by Stefan Vrzic ❤️</p>
     </footer>
-    <!-- end footer section -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script>
+    <script src="script.js"></script>
   </body>
 </html>
