--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
       </div>
     </section>
     <footer>
-      <p>&#169; Created with love by Stefan Vrzic ❤️</p>
+      <p>&#169; 2025 Created by Stefan Vrzic</p>
     </footer>
     <script src="script.js"></script>
   </body>
