Restored to the working version and added detailing studio and did some touch up on site

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             alt="snapshot of danica design social website which was built for instagram"
             class="project-image"
           />
-          <p class="project-tile">Danica Design IG Social</p>
+          <p class="project-tile">Danica Design Socials</p>
         </a>
         <a href="https://mediumspringgreen-kangaroo-534355.hostingersite.com/" target="_blank" class="project">
           <img
@@ -91,7 +91,16 @@
             alt="csnapshot of Vrza Tech social links website"
             class="project-image"
           />
-          <p class="project-tile">Vrza Tech Social links</p>
+          <p class="project-tile">Vrza Tech Socials</p>
+        </a>
+        <a href="https://lightskyblue-caterpillar-427104.hostingersite.com/" target="_blank" class="project">
+          <img
+            src="./images/detailing-studio.png"
+            alt="coming-soon-image"
+            class="project-image"
+          />
+
+          <p class="project-tile">Detailing Studio</p>
         </a>
         <a
           href="https://vrza93.github.io/weather/"
@@ -129,15 +138,6 @@
           />
           <p class="project-tile">To-Do App</p>
       </a>
-        <a href="#projects" class="project">
-          <img
-            src="./images/coming-soon.jpg"
-            alt="coming-soon-image"
-            class="project-image"
-          />
-
-          <p class="project-tile">Coming soon</p>
-        </a>
       </div>
       <a href="https://github.com/vrza93" class="btn-show-all" target="_blank">
         <i class="fab fa-github"></i> View All Projects
@@ -198,7 +198,7 @@
       </div>
     </section>
     <footer>
-      <p>&#169; 2025 Created by Stefan Vrzic</p>
+      <p>&#169; 2026 Created and maintained by Stefan Vrzic</p>
     </footer>
     <script src="script.js"></script>
   </body>
